--- a/hzone/templates/base.html
+++ b/hzone/templates/base.html
@@ -8,6 +8,12 @@
         hzone | {% block title %}<!-- 填入内容 -->{% endblock %}
     </title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/jquery@1.12.4/dist/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js"></script>
+    <!--  Bootstrap  -->
+    <script type="text/javascript" src="/static/jquery.min.js"> </script>
+    <!-- jQuery -->
+  
   </head>
   <body background="https://cn.bing.com/th?id=OHR.OceanHeart_ZH-CN2697021215_1920x1080.jpg"
   style="background-attachment:fixed;">
@@ -33,9 +39,10 @@
                   <!-- Collect the nav links, forms, and other content for toggling -->
                   <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav">
-                      <li><a href="/">Link</a></li>
-                      <li><a href="/">Link</a></li>
-                      <li><a href="/">Link</a></li>
+                      <li><a href="/">博客</a></li>
+                      <li><a href="/">交易</a></li>
+                      <li><a href="/">社团</a></li>
+                      <li><a href="/">留言</a></li>
                     </ul>
                     <!-- 左侧三个link -->
                     <form class="navbar-form navbar-left">
@@ -49,20 +56,20 @@
                       <li><a href="#">发表</a></li>
                       <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-                          用户中心
+                            个人中心
                           <span class="caret">
                           </span>
                         </a>
                         <ul class="dropdown-menu">
                           {% if user.is_authenticated %}
                           <!-- 判断用户是否登录 -->
-                            <li><a href="/user">空间</a></li>
-                            <li><a href="/user/upload">编辑</a></li>
+                            <li><a href="/user/{{ user.id }}">空间</a></li>
+                            <li><a href="/user/update">编辑</a></li>
                             <li role="separator" class="divider"></li>
                             <!-- 分割线 -->
-                            <li><a href="#">注销</a></li>
+                            <li><a href="/user/log_out">注销</a></li>
                           {% else %}
-                            <li><a href="#">登录</a></li>
+                            <li><a href="/user/log_in">登录</a></li>
                             <li><a href="#">注册</a></li>
                           {% endif %}
                         </ul>
@@ -72,7 +79,7 @@
                   </div><!-- /.navbar-collapse -->
                 </div><!-- /.container-fluid -->
             </nav>
-            <div style="background-color: aliceblue;">
+            <div>
             <!-- 设置底色 -->
               {% block content %}
               <!-- 填入内容 -->
@@ -115,7 +122,15 @@
             <!--  侧边空余   -->
         </div>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/jquery@1.12.4/dist/jquery.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js"></script>
+
+
+
+    {% block script %}
+      <!-- write js here -->
+    {% endblock %}
+
+
+
+    
   </body>
 </html>
