留言板块的雏形

--- a/hzone/templates/base.html
+++ b/hzone/templates/base.html
@@ -42,7 +42,7 @@
                       <li><a href="/">博客</a></li>
                       <li><a href="/">交易</a></li>
                       <li><a href="/">社团</a></li>
-                      <li><a href="/">留言</a></li>
+                      <li><a href="/board">留言</a></li>
                     </ul>
                     <!-- 左侧三个link -->
                     <form class="navbar-form navbar-left">
@@ -87,7 +87,9 @@
             </div>
         </div>
         <div class="col-md-3">
-            <div class="panel panel-default">
+          <div class="position-fixed" >
+          <!-- 侧边栏固定  -->
+              <div class="panel panel-default">
                 <div class="panel-heading">
                   <h3 class="panel-title">公告栏</h3>
                 </div>
@@ -101,8 +103,10 @@
                   Panel contentPanel contentPanel content
                   Panel contentPanel contentPanel content
                 </div>
-            </div>
-            <div class="panel panel-default">
+              </div>
+
+
+              <div class="panel panel-default">
                 <div class="panel-heading">
                   <h3 class="panel-title">网页信息</h3>
                 </div>
@@ -116,8 +120,13 @@
                   Panel contentPanel contentPanel content
                   Panel contentPanel contentPanel content
                 </div>
-            </div>
+              </div>
+
+
+              
+          </div>
         </div>
+
         <div class="col-md-1">
             <!--  侧边空余   -->
         </div>
