已经初步实现分页&底部加载，有一些小bug。PS：难道前端就是依靠代码的堆积吗？

--- a/hzone/board/templates/stk.html
+++ b/hzone/board/templates/stk.html
@@ -21,6 +21,8 @@
     <hr>
         
     <div id="stk">
+        <div id="cur">
+        <!-- 初始加载 -->
         {% for each in msgs %}
             <div class="row" style="background-color: aliceblue;">
                 <div class="col-md-2">
@@ -44,7 +46,9 @@
                 暂无留言
             </h2>
         {% endfor %}
+        </div>
     </div>
+
 
 {% endblock %}
 
@@ -75,26 +79,29 @@
     </script>
 
     <script>
-        var url = window.location.href;
+        var url = window.location.href + '?page=';
         // 网址
-        var arg = url.split('=')[0];
-        // 参数
-        var num = parseInt(url.split('=')[1]);
+        var num = 1;
         // 页码
-        console.log(num);
-
         $(document).ready(function(){
             $(window).scroll(function(){
                 var past = $(window).scrollTop(); 
                 var now = $(window).height();
                 var total = $(document).height();
-                if (total - 50 <= past + now && num){
+                if (total <= past + now && num){
                     num += 1;
-                    next_page = arg + '=' +num ;
-                    $("#stk").load(next_page +" #stk");
+
+                    var new_div = document.createElement("div"); 
+                    // 新建容器
+                    new_div.setAttribute('id','p'+num);
+                    // 唯一编号
+                    $("#stk").append(new_div);
+                    // 底部添加
+                    $("#p"+num).load(url + num + ' #cur');
+                    // 加载内容
+                    
                 }
             });
         });
     </script>
-
 {% endblock %}
