--- a/hzone/board/templates/stk.html
+++ b/hzone/board/templates/stk.html
@@ -15,7 +15,9 @@
             <button type="submit" style="width: 100px;">发布</button>
         </form>
     {% else %}
-        <h2>请先登录后发布</h2>
+        <div style="background-color: aliceblue;">
+            <h2>请先登录后发布</h2>
+        </div>
     {% endif %}
     
     <hr>
