--- a/hzone/templates/base.html
+++ b/hzone/templates/base.html
@@ -69,7 +69,7 @@
                             <li><a href="/user/log_out">注销</a></li>
                           {% else %}
                             <li><a href="/user/log_in">登录</a></li>
-                            <li><a href="#">注册</a></li>
+                            <li><a href="/user/register">注册</a></li>
                           {% endif %}
                         </ul>
                       </li>
