--- a/hzone/user/templates/register.html
+++ b/hzone/user/templates/register.html
@@ -1,10 +1,10 @@
 {% extends 'base.html' %}
 {% block title %}
-    登录
+    注册
 {% endblock %}
 
 {% block content %}
-    <form id="login_form" action="/user/log_in/" method="post" style="background-color: aliceblue;">
+    <form id="register_form" action="/user/register/" method="post" style="background-color: aliceblue;">
         {% csrf_token %}
         <div class="row">
             <br>
@@ -13,43 +13,50 @@
 
                 <div class="form-group">
                     <label>用户名</label>
-                    <input name="un" class="form-control" placeholder="please input Username">
+                    <input name="un" class="form-control" placeholder="Username">
                 </div>
                 
                 <hr>
                  
                 <div class="form-group">
                     <label for="exampleInputPassword1">密码</label>
-                    <input name="pw" type="password" class="form-control" id="exampleInputPassword1" placeholder="please input Password">
+                    <input name="pw" type="password" class="form-control" placeholder="Password">
                 </div>
+
+
+                <hr>
+                 
+                <div class="form-group">
+                    <label for="exampleInputPassword1">重复</label>
+                    <input name="re" type="password" class="form-control" placeholder="repeat Password">
+                </div>
+
 
             </div>
             <div class="col-md-3"></div>
         </div>
         <hr>
-        <button type="submit" style="width: 40%;" class="center-block">登录</button>
+        <button type="submit" style="width: 40%;" class="center-block">注册</button>
         <hr>
     </form>
 
 {% endblock %}
 
-
 {% block script %}
-    <script type="text/javascript">
-        $('#login_form').submit(function(){
+    <script>
+        $('#register_form').submit(function(){
             $.ajax({
-                url:'/user/log_in/',
+                url:'/user/register/',
                 type:'POST',
-                data:$('#login_form').serialize(),
+                data:$('#register_form').serialize(),
                 cache:false,
                 success:function(context){
                     if(context['status'] == 'SUCCESS'){
-                        alert("欢迎光临！");
+                        alert("注册成功！");
                         window.location.href = '/';
-                        // 页面跳转
                     }
-                    if(context['status'] == 'ERROR'){
-                        alert("账号或密码错误");
+                    else{
+                        alert(context['status']);
                     }
                 },
             });
