除了Django User内置的session机制之外，目前我在寻找session其他的用途...

--- a/hzone/templates/base.html
+++ b/hzone/templates/base.html
@@ -97,8 +97,8 @@
             </div>
         </div>
         <div class="col-md-3">
-          <div class="position-fixed" >
-          <!-- 侧边栏固定  -->
+          <div style="position:fixed;width: 20%;">
+          <!-- 侧边栏固定 , 不太好用 -->
               <div class="panel panel-default">
                 <div class="panel-heading">
                   <h3 class="panel-title">公告栏</h3>
