--- a/hzone/user/templates/room.html
+++ b/hzone/user/templates/room.html
@@ -23,9 +23,12 @@
                         <p>
                             这个人很懒，什么也没有写
                         </p>
-                    {% endif %}  
+                    {% endif %}
+                    <h5>
+                        浏览次数 {{ id_user.browse }}
+                    </h5>
                 </div>
-            </div>        
+            </div>
         </div>
     </div>
 {% endblock %}
