已经通过session，实现了浏览位置记录功能，但是没有好的地方可以应用，故暂时没有commit。我设想是的用在博客列表里面XD   js原来也可以直接使用模板语言，我看vscode 里面js在赋值变量 var xx = {{  }};的时候一直会警告，我还以为不能直接用呢，浪费了不少时间！！！

--- a/hzone/templates/base.html
+++ b/hzone/templates/base.html
@@ -38,7 +38,7 @@
                   <!-- Collect the nav links, forms, and other content for toggling -->
                   <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav">
-                      <li><a href="/">博客</a></li>
+                      <li><a href="/blog">博客</a></li>
                       <li><a href="/">交易</a></li>
                       <li><a href="/">社团</a></li>
                       <li><a href="/board">留言</a></li>
