--- a/hzone/templates/base.html
+++ b/hzone/templates/base.html
@@ -33,7 +33,7 @@
                       <!-- 小屏模式下的右边三条横杠 -->
                       
                     </button>
-                    <a class="navbar-brand" href="/">Hzone</a>
+                    <a class="navbar-brand" href="/"><span class="glyphicon glyphicon-home"></span></a>
                   </div>
                   <!-- Collect the nav links, forms, and other content for toggling -->
                   <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -63,29 +63,33 @@
                     </form>
                     
                     <ul class="nav navbar-nav navbar-right">
-                      <li><a href="#">发表</a></li>
-                      <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-                            个人中心
-                          <span class="caret">
-                          </span>
-                        </a>
-                        <ul class="dropdown-menu">
-                          {% if user.is_authenticated %}
-                          <!-- 判断用户是否登录 -->
-                            <li><a href="/user/{{ user.id }}">空间</a></li>
+                      {% if user.is_authenticated %}
+                      <!-- 判断用户是否登录 -->
+                        <li><a href="/user/write"><span class="glyphicon glyphicon-plus"></span></a></li>
+                        <!-- 发布博客 -->
+                        <li class="dropdown">
+                          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                            <span class="glyphicon glyphicon-user"></span>
+                            <span class="caret">
+                            </span>
+                          </a>
+                          <ul class="dropdown-menu">                            
+                            <li><a href="/user/{{ user.id }}">空间</span></a></li>
+                            <!-- 空间 -->
                             <li><a href="/user/update">编辑</a></li>
+                            <!-- 编辑个人信息 -->
                             <li role="separator" class="divider"></li>
                             <!-- 分割线 -->
                             <li><a href="/user/log_out">注销</a></li>
-                          {% else %}
-                            <li><a href="/user/log_in">登录</a></li>
-                            <li><a href="/user/register">注册</a></li>
-                          {% endif %}
-                        </ul>
-                      </li>
-                    </ul>
-                    <!-- 右侧link，下拉框 -->
+                          </ul>
+                        </li>
+                      </ul>
+                      <!-- 右侧link，下拉框 -->
+                      {% else %}
+                        <li><a href="/user/log_in">登录</a></li>
+                        <li><a href="/user/register">注册</a></li>
+                      {% endif %}
+                    
                   </div><!-- /.navbar-collapse -->
                 </div><!-- /.container-fluid -->
             </nav>
